--- a/pm-analyzer-fiori/webapp/view/Object.view.xml
+++ b/pm-analyzer-fiori/webapp/view/Object.view.xml
@@ -6,7 +6,7 @@
     xmlns:core="sap.ui.core">
     <Page
         id="page"
-        title="Meldungsdetails: {NotificationId}"
+        title="{parts: ['i18n>objectPageTitle', 'NotificationId'], formatter: 'jQuery.sap.formatMessage'}"
         showNavButton="true"
         navButtonPress=".onNavBack">
         <content>
@@ -22,15 +22,15 @@
                     columnsXL="1" columnsL="1" columnsM="1"
                     singleContainerFullSize="false">
                     <f:content>
-                        <Label text="Beschreibung"/>
+                        <Label text="{i18n>object.descriptionLabel}"/>
                         <Text id="descriptionText" text="{Description}" />
-                        <Label text="Meldungsart"/>
+                        <Label text="{i18n>object.typeLabel}"/>
                         <Text id="typeText" text="{NotificationType}" />
-                        <Label text="Erfasst von"/>
+                        <Label text="{i18n>object.userLabel}"/>
                         <Text id="userText" text="{CreatedByUser}" />
-                        <Label text="Langtext"/>
+                        <Label text="{i18n>object.longTextLabel}"/>
                         <TextArea id="longText" value="{LongText}" growing="true" width="100%" editable="false"/>
-                        <Label text="Maßnahmen"/>
+                        <Label text="{i18n>object.activitiesLabel}"/>
                         <TextArea id="activitiesText" value="{Activities}" growing="true" width="100%" editable="false"/>
                     </f:content>
                 </f:SimpleForm>
@@ -38,7 +38,7 @@
                 <!-- Analyse Button -->
                 <Button
                     id="analyzeButton"
-                    text="Qualität analysieren"
+                    text="{i18n>object.analyzeButtonText}"
                     type="Emphasized"
                     press=".onAnalyzePress"
                     class="sapUiSmallMarginTop"
@@ -48,7 +48,7 @@
                 <Panel id="resultsPanel" visible="false" class="sapUiSmallMarginTop" expandable="true" expanded="true" width="auto">
                     <headerToolbar>
                         <Toolbar>
-                            <Title text="Analyseergebnis"/>
+                            <Title text="{i18n>object.resultsPanelTitle}"/>
                             <ToolbarSpacer/>
                             <core:Icon id="loadingSpinner" src="sap-icon://synchronize" class="sapUiMediumMarginEnd sap-icon-spin" visible="false"/>
                         </Toolbar>
@@ -56,7 +56,7 @@
                     <content>
                         <f:SimpleForm layout="ResponsiveGridLayout">
                             <f:content>
-                                <Label text="Qualitäts-Score"/>
+                                <Label text="{i18n>object.scoreLabel}"/>
                                 <ProgressIndicator
                                     id="scoreIndicator"
                                     percentValue="0"
@@ -64,15 +64,15 @@
                                     showValue="true"
                                     state="None" />
 
-                                <Label text="Gefundene Probleme"/>
+                                <Label text="{i18n>object.problemsLabel}"/>
                                 <List
-                                    id="issuesList"
-                                    items="{analysis>/issues}">
-                                    <StandardListItem title="{analysis>}" />
+                                    id="problemsList"
+                                    items="{analysis>/problems}">
+                                    <StandardListItem title="{}" type="Inactive" />
                                 </List>
 
-                                <Label text="Zusammenfassung"/>
-                                <Text id="summaryText" text="{analysis>/summary}" />
+                                <Label text="{i18n>object.summaryLabel}"/>
+                                <Text id="summaryText" text="{analysis>/summary}"/>
                             </f:content>
                         </f:SimpleForm>
                     </content>
