--- a/pm-analyzer-fiori/webapp/view/Worklist.view.xml
+++ b/pm-analyzer-fiori/webapp/view/Worklist.view.xml
@@ -1,11 +1,19 @@
 <mvc:View
     controllerName="com.sap.pm.pmanalyzerfiori.controller.Worklist"
     xmlns="sap.m"
-    xmlns:mvc="sap.ui.core.mvc">
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:core="sap.ui.core">
     <Page id="worklistPage" title="{i18n>worklistTitle}" busy="{ui>/isBusy}">
         <headerContent>
             <HBox visible="{ui>/isAuthenticated}" alignItems="Center">
                 <Text text="{ui>/userProfile/name}" class="sapUiSmallMarginEnd" />
+                <Select
+                    id="languageSelect"
+                    change=".onLanguageChange"
+                    class="sapUiSmallMarginEnd">
+                    <core:Item key="en" text="English" />
+                    <core:Item key="de" text="Deutsch" />
+                </Select>
                 <Button
                     id="logoutButton"
                     text="{i18n>logoutButtonText}"
