--- a/pm-analyzer-fiori/webapp/view/Login.view.xml
+++ b/pm-analyzer-fiori/webapp/view/Login.view.xml
@@ -3,21 +3,18 @@
     xmlns:mvc="sap.ui.core.mvc"
     xmlns="sap.m"
     displayBlock="true">
+    <!-- This view will now simply trigger navigation to the worklist in its controller's onInit.
+         The content is minimal as it's just a redirect page. -->
     <Page id="loginPage" showHeader="false" class="sapUiContentPadding">
         <content>
             <FlexBox
-                height="80vh"
+                height="100vh"
                 alignItems="Center"
                 justifyContent="Center">
                 <VBox class="sapUiSmallMargin" alignItems="Center">
-                    <Title text="{i18n>loginWelcomeTitle}" class="sapUiTinyMarginBottom" />
-                    <Text text="{i18n>loginIntroText}" class="sapUiSmallMarginBottom" />
-                    <Button
-                        id="loginButton"
-                        text="{i18n>loginButtonText}"
-                        type="Emphasized"
-                        press=".onLoginPress"
-                        icon="sap-icon://log" />
+                    <Title text="{i18n>loadingAppTitle}" class="sapUiTinyMarginBottom" />
+                    <Text text="{i18n>loadingAppText}" class="sapUiSmallMarginBottom" />
+                    <BusyIndicator size="L" />
                 </VBox>
             </FlexBox>
         </content>
